--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         
-        <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}" />
+        <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	</head>
 	<body>
